# py-data-analysis-case-library

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/py-data-analysis-case-library/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: py-data-analysis-case-library.md
cases/: index.md
cases/市场营销与运营/: index.md
cases/市场营销与运营/mkt-007-uplift-campaign-targeting/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/市场营销与运营/mkt-008-churn-prediction-benchmark/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/市场营销与运营/mkt-009-rfm-customer-segmentation/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/社会科学/: index.md
cases/社会科学/soc-004-twfe-left-behind-education/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/社会科学/soc-005-cox-health-inequality/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/社会科学/soc-006-sem-social-capital-wellbeing/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
cases/社会科学/soc-014-bertopic-policy-discourse/: analysis.ipynb  analysis.py  best-practice-roadmap.md  index.md  references.bib
cases/社会科学/soc-015-social-network-community-diffusion/: analysis.ipynb  analysis.py  index.md  (+1 more)
cases/经济金融/: index.md
references/: first-batch-source-register.md  second-batch-source-register.md
scripts/: check_notebook_sync.py  run_case_smoke.py  validate_catalog.py
templates/case-template/: analysis.ipynb  analysis.py  index.md  params.yaml  references.bib
(+83 files in other folders)
